fdo#68607 bnc#816593 DomainMapperTableHandler: don't always start a frame

This is a port of commit 8fe8bd6c3b5b1a539b7370f8c457fa69c061d2de
"Related: fdo#61594 SwWW8ImplReader::StartApo: don't always start a
frame" from the WW8 filter to the DOCX one.

(regression from edc4861a68e0269b83b17e0ec57912a1ce4220ad)

Change-Id: If1bb4a8a3786aacd618585cf859b57ce9be85c51