writerfilter/source/dmapper/PropertyMap.cxx
@@ -1203,6 +1203,11 @@ void SectionPropertyMap::SetFirstPaperBin( sal_Int32 nSet )
 }
 
 
+sal_Int32 SectionPropertyMap::GetPageWidth()
+{
+    return operator[](PropertyDefinition(PROP_WIDTH)).get<sal_Int32>();
+}
+
 StyleSheetPropertyMap::StyleSheetPropertyMap() :
     mnCT_Spacing_line( 0 ),
     mnCT_Spacing_lineRule( 0 ),
